# agentsync

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  init.sh  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  spec-fix.yml  spec-watch.yml
config.example/: instructions.md  mcp.json  overrides.json  profile.json  skills.json
core/: agentsync.py  gen_docs.py  plugpack.py  skills.py  spec_watch.py  targets.py  util.py
core/adapters/: __init__.py  claude.py  cline.py  copilot.py  cursor.py  opencode.py  vscode.py  windsurf.py  zed.py
core/enforcement/: _msg.sh  _runner.sh  guard-commit.sh  opencode-plugin.js  prompt-context.sh  scaffold.sh  session-nudge.sh
docs/: ci.md  spec-sources.json
docs/spec-snapshots/: README.md  claude--code-claude-com-docs-en-mcp.txt  claude-plugins--code-claude-com-docs-en-plugin-marketplaces-md.txt  claude-plugins--code-claude-com-docs-en-plugins-reference-md.txt  claude-plugins--code-claude-com-docs-en-sub-agents-md.txt  cline--docs-cline-bot-customization-cline-rules.txt  cline--docs-cline-bot-mcp-configuring-mcp-servers.txt  copilot--docs-github-com-en-copilot-how-tos-copilot-cli-customize-copilot-add-custom-instructions.txt  (+12 more)
tests/: test_apply.py  test_docs.py  test_golden.py  test_lifecycle.py  test_plugpack.py  test_project.py  test_runner.sh  test_scaffold.sh  test_skills.py  test_specwatch.py
(+13 files in other folders)
